feat: added link transition

--- a/static/register.html
+++ b/static/register.html
@@ -36,6 +36,7 @@
     <input type="password" id="inputPasswordRepeat" class="form-control" placeholder="Повторите пароль" required>
 
     <button class="btn btn-lg btn-primary btn-block" type="submit">Регистрация</button>
+    <a href="./login.html">Войти</a>
     <p class="mt-5 mb-3 text-muted">&copy; telegraph 2020</p>
 
 </form>
