--- a/static/login.html
+++ b/static/login.html
@@ -10,13 +10,15 @@
 </head>
 <body class="text-center">
 <form class="form-login">
-    <h1 class="h3 mb-3 font-weight-normal">Авторизация</h1>
+    <h1 class="h3 mb-3 font-weight-normal">Вход</h1>
     <label for="inputEmail" class="sr-only">Логин</label>
     <input type="email" id="inputEmail" class="form-control" placeholder="Логин" required autofocus>
     <label for="inputPassword" class="sr-only">Пароль</label>
     <input type="password" id="inputPassword" class="form-control" placeholder="Пароль" required>
 
     <button class="btn btn-lg btn-primary btn-block" type="submit">Войти</button>
+    <a href="./register.html">Зарегистрироваться</a>
+
     <p class="mt-5 mb-3 text-muted">&copy; telegraph 2020</p>
 </form>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
